test/test_examples/syntactic_examples/syntax_error/error_statement_03.zig
// Syntax error: missing closing curly bracket

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    {
        {
    }
}